# manifold

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  results.tsv
.github/workflows/: openwiki-update.yml
configs/: modality_mapping.json
configs/env/: environment.yaml  environment_brats2023.yaml  environment_euler.yaml  environment_sugon.yaml
configs/network/: config_network.yaml
configs/train/: config_controlnet_grpo.yaml  config_controlnet_supervised.yaml  config_grpo.yaml  config_paired_grpo.yaml  config_paired_jit.yaml  config_paired_reward.yaml  config_reward.yaml  config_rflow_jit.yaml
docs/adr/: 0001-diffusers-style-foundation.md  0002-true-heun-two-eval.md  0003-scale-factor-on-vae-and-native-ckpt.md  0004-omegaconf-layer-above-configmixin.md  0005-sampler-owned-by-module-pipeline-delegates.md  0006-training-ckpt-lightning-native-via-export.md  0007-retire-hope-converter.md  0008-partial-denoise-scheduler-by-inheritance.md  0009-reward-partial-reconstruction-labels-and-generated-end-probe.md  0010-online-rollout-in-the-loop-preference-pairs.md  0011-grpo-singular-branching-rollout.md  0012-grpo-module-training-loop.md  0013-paired-jit-reuse-transport-data-endpoint.md  0014-paired-jit-conditioning-concat-and-summed-labels.md  0015-grpo-kl-anchor-and-bounded-reward.md  0016-multigpu-validation-rank0-only-honest-guards.md  0017-latent-warmup-in-datamodule-setup.md  0018-paired-reward-real-vs-fake-supervision.md  0019-paired-reward-condition-aware.md  0020-paired-reward-offline-precompute.md  0021-paired-reward-generator-export-and-slow-ema-arm.md  0022-paired-reward-two-way-subject-split.md  0023-paired-reward-probe-and-monitor.md  0024-paired-grpo-brownian-bridge.md  0025-all-ddp-validation-no-rank0-gate.md  0026-controlnet-via-monai-native-residual-interface.md  0027-controlnet-supervised-then-grpo-two-stage.md  0028-two-mode-grpo-unify-controlnet-delete-bridge.md  0029-callback-registry.md  0030-fid-callback-split.md  0031-device-ownership.md  0032-cli-spine-collapse.md  0033-scripts-elimination.md  0034-one-realism-reward-both-grpo-policies-delete-condition-aware.md
docs/prd/: ddp-correctness.md
openwiki/: .last-update.json  architecture.md  index.md  operations-and-testing.md  quickstart.md  workflows.md
scripts/: _debug_fid_diff.py  _fid_real_parity.py  _train_step_diff_hope.py  convert_hope_checkpoint.py  diag_brain_mask_psnr.py  diag_paired_ceiling.py  export_checkpoint.py  generate_reward_pairs.py
scripts/_archive/: validate_against_hope.py
src/manifold/: __init__.py  configuration.py
src/manifold/config/: __init__.py  builder.py  loader.py
src/manifold/data/: __init__.py  base.py  datamodule.py  labels.py  latent_dataset.py  latent_pipeline.py  paired_brats.py  paired_latent_dataset.py  paired_manifests.py  paired_reward_pairs.py  paired_volume_dataset.py  reward_pairs.py  transforms.py  volume_dataset.py  warm_datamodule.py
src/manifold/metrics/: __init__.py  fid.py  fid_callback.py  metric_plot_callback.py  psnr_ssim_callback.py
src/manifold/metrics/fid/: __init__.py  callback.py  decoder.py  extractor.py  reducer.py  rollout.py  vram.py
src/manifold/models/: __init__.py  autoencoder_kl.py  controlnet_3d.py  modeling_utils.py  reward_model.py  unet_3d_condition.py
src/manifold/modules/: __init__.py  controlnet_latent_flow.py  controlnet_sampler.py  grpo.py  latent_flow.py  paired_grpo.py  paired_latent_flow.py  paired_reward.py  paired_sampler.py  partial_denoise.py  reward.py  sampler.py
src/manifold/pipelines/: __init__.py  controlnet_latent_flow.py  latent_flow.py  paired_latent_flow.py  pipeline_utils.py
src/manifold/schedulers/: __init__.py  scheduling_flow_match_bridge_grpo.py  scheduling_flow_match_grpo.py  scheduling_flow_match_heun.py  scheduling_partial_flow_match_heun.py  scheduling_utils.py
src/manifold/training/: __init__.py  cli.py  controlnet_cli.py  controlnet_inputs.py  core.py  ema.py  export.py  export_cli.py  grpo_cli.py  metrics.py  paired_cli.py  paired_grpo_cli.py  paired_reward_cli.py  reward_cli.py  trainer.py
src/manifold/training/callbacks/: __init__.py  checkpoint.py  context.py  fid.py  registry.py  train_loss.py
tests/: _native_exports.py  conftest.py  ddp.py  test_callback_registry.py  test_cfg.py  test_config.py  test_controlnet_cli.py  test_controlnet_ddp_monitor.py  test_controlnet_model.py  test_controlnet_module_training.py  test_controlnet_pipeline_inference.py  test_controlnet_warm_defer.py  test_data.py  test_ddp.py  test_ddp_detection.py  test_ddp_metrics.py  test_ddp_val_honesty.py  test_ddp_warm.py  test_fid.py  test_fid_helpers.py  test_grpo.py  test_metric_plot.py  test_module_training.py  test_paired_data.py  test_paired_grpo.py  test_paired_latent_cache.py  test_paired_manifests.py  test_paired_metrics.py  test_paired_module_training.py  test_paired_persistence.py  test_paired_pipeline_inference.py  test_paired_reward.py  test_paired_reward_deleted.py  test_paired_reward_loader.py  test_paired_reward_real.py  test_paired_training_cli.py  test_persistence.py  test_pipeline_inference.py  test_reward.py  test_reward_pairs.py  (+4 more)
tests/parity/: validate_against_hope.py
