[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manifold"
version = "0.1.0"
description = "Manifold: pretraining & medical imaging experiments built on stable-pretraining and MONAI."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Junran" }]
keywords = ["deep-learning", "pretraining", "medical-imaging", "monai", "self-supervised"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "stable-pretraining",
    # `einops` is an optional MONAI extra that the wrapped MONAI MAISI UNet
    # structurally requires (its attention blocks use `einops.Rearrange`). We
    # surface it as part of the `monai` dependency rather than a separate
    # package, so the install surface stays "monai" rather than gaining a new
    # framework dependency.
    "monai[einops]",
    # The OmegaConf *experiment-config* layer (env -> train -> network
    # composition) reads/writes YAML at launch (ADR-0004). It builds components
    # but never persists them — component config stays JSON via ConfigMixin.
    "omegaconf",
    # The BraTS latent-prep data stack (#16) loads NIfTI volumes (nibabel) and
    # warms a frozen-VAE latent cache (progress via tqdm).
    "nibabel",
    "tqdm",
    # The unbiased 2.5D FID validation callback (#27): scipy for the principal
    # matrix square-root in the Fréchet distance, torchvision for the RadImageNet
    # ResNet50 backbone factory.
    "scipy",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
# The JiT training launcher (issue #28): compose config -> warm cache -> fit.
# `python -m` parity for the export bridge is scripts/export_checkpoint.py.
manifold-train = "manifold.training.cli:main"
# The standalone reward-training launcher (issue #39/#40): precomputed pairs -> fit.
# Pair generation is scripts/generate_reward_pairs.py (loads the frozen JiT export).
manifold-train-reward = "manifold.training.reward_cli:main"
# The GRPO policy-post-training launcher (issue #55/#56): the frozen reward steers a
# Granular-GRPO singular-branch update of the raw-arm JiT x0-denoiser (the policy).
manifold-train-grpo = "manifold.training.grpo_cli:main"
# The Paired JiT (src→tgt flow) launcher (issue #69): warms the paired BraTS
# latent cache (Slice 2) and fits the paired Module + double-EMA + PSNR/SSIM.
manifold-train-paired = "manifold.training.paired_cli:main"
# The Paired-JiT reward model launcher (issue #93): real-vs-fake, condition-aware
# PatchGAN reward (in_channels = 2·C_latent), offline-precomputed pairs -> fit.
# The frozen paired generator loads from --native-dir (issue #94's paired export).
manifold-train-paired-reward = "manifold.training.paired_reward_cli:main"
# The Paired-JiT GRPO launcher (issue #103, G2RPO / ADR-0024): Granular-GRPO
# singular-branch post-training of the Paired JiT UNet over a src→tgt Brownian
# bridge against the frozen paired reward. The bridge is training-only; inference
# reuses manifold-train-paired's deterministic Heun pipeline.
manifold-train-paired-grpo = "manifold.training.paired_grpo_cli:main"

[project.urls]
Homepage = "https://github.com/junran/manifold"

[tool.hatch.build.targets.wheel]
packages = ["src/manifold"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
