[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manifold"
version = "0.1.0"
description = "Manifold: pretraining & medical imaging experiments built on stable-pretraining and MONAI."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Junran" }]
keywords = ["deep-learning", "pretraining", "medical-imaging", "monai", "self-supervised"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "stable-pretraining",
    # `einops` is an optional MONAI extra that the wrapped MONAI MAISI UNet
    # structurally requires (its attention blocks use `einops.Rearrange`). We
    # surface it as part of the `monai` dependency rather than a separate
    # package, so the install surface stays "monai" rather than gaining a new
    # framework dependency.
    "monai[einops]",
    # The OmegaConf *experiment-config* layer (env -> train -> network
    # composition) reads/writes YAML at launch (ADR-0004). It builds components
    # but never persists them — component config stays JSON via ConfigMixin.
    "omegaconf",
    # The BraTS latent-prep data stack (#16) loads NIfTI volumes (nibabel) and
    # warms a frozen-VAE latent cache (progress via tqdm).
    "nibabel",
    "tqdm",
    # The unbiased 2.5D FID validation callback (#27): scipy for the principal
    # matrix square-root in the Fréchet distance, torchvision for the RadImageNet
    # ResNet50 backbone factory.
    "scipy",
    "torchvision",
    # The post-epoch metrics line-chart callback (#119): renders the CSVLogger's
    # metrics.csv to a PNG under model_dir. Pure-CPU (no DCU/CUDA kernel), so a
    # plain wheel installs on the sugon cluster too.
    "matplotlib",
    # The training loggers: Lightning's TensorBoardLogger and WandbLogger both
    # write under model_dir. Hard deps — manifold.training.trainer imports
    # tensorboard/wandb at module top so a missing install fails fast (no
    # try/except), per the repo Python rules §4.
    "tensorboard",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
# The JiT training launcher (issue #28): compose config -> warm cache -> fit.
manifold-train = "manifold.training.cli:main"
# The standalone reward-training launcher (issue #39/#40): precomputed pairs -> fit.
manifold-train-reward = "manifold.training.reward_cli:main"
# The GRPO policy-post-training launcher (issue #55/#56): the frozen reward steers a
# Granular-GRPO singular-branch update of the raw-arm JiT x0-denoiser (the policy).
manifold-train-grpo = "manifold.training.grpo_cli:main"
# The ControlNet supervised launcher (issue #141 / ADR-0027 stage 1): a frozen JiT
# base UNet + a trainable ControlNet over the paired MRI latent cache -> fit. The
# frozen base loads from --native-dir (a JiT native export); the paired cache from
# --latents-dir. Stage 2 (ControlNet GRPO) runs via manifold-train-grpo --grpo-mode 2.
manifold-train-controlnet = "manifold.training.controlnet_cli:main"
# The checkpoint -> native inference-dir export bridge (ADR-0006 / ADR-0033): bake
# the inference UNet/VAE/scheduler (jit / paired / controlnet) from a Lightning
# ``.ckpt`` into a dir ``LatentFlowPipeline.from_pretrained`` loads.
manifold-export = "manifold.training.export_cli:main"

[project.urls]
Homepage = "https://github.com/junran/manifold"

[tool.hatch.build.targets.wheel]
packages = ["src/manifold"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
